fix(security): 보안 롤의 수정·검색·페이지 크기 세 축을 살린다
보안 롤 관리 화면은 등록·삭제만 됐고, 검색과 페이지당 건수는 서버에 닿지 않았다. 세 축 모두
**구현은 이미 있는데 아무도 부르지 않는** 상태였다.

**① 수정 경로가 화면에 없었다.** 롤 명칭 오타 하나도 고칠 수 없어 지우고 다시 만드는 것이
유일한 방법이었다. 반면 경로는 위아래로 다 열려 있었다 —
RoleApiController @PutMapping("/{roleCode}") → RoleManageService.updateRole →
RoleInfo.update(roleNm, rolePatrn, roleExpln, roleTypeCd, roleSort), 프런트
roleAdminService.updateRole 까지. 보안 그룹 화면의 편집 흐름을 그대로 이식했다(같은 규약:
editingRole state, 모달 제목·제출 라벨 분기, 등록 진입 시 초기화).

roleId 는 수정 중 읽기 전용이다 — PK 이자 PUT 의 경로 변수라 바꾸면 **다른 롤을 덮어쓴다.**

**② 검색어가 서버에서 통째로 무시됐다.** RoleManageService.selectRoleList 가
`roleInfoRepository.findAll(pageable)` 이라 조건이 없었고, 총건수는 조건 없는 `count()` 였다.
그런데 검색·페이징·건수를 모두 갖춘 QueryDSL 구현(RoleInfoRepositoryImpl.selectRoleList)이
이미 있었고 **아무도 부르지 않았을 뿐**이다. 그 구현을 배선하고, 목록과 총건수를 한 Page 에서
얻어 두 값이 어긋나는 축을 구조적으로 없앴다(selectRoleListTotCnt 제거).

**③ 페이지당 건수 선택이 씹혔다.** 서버 toPageable() 은 pageUnit 만 보는데 프런트는 size 만
보냈다. 조회는 늘 10건이고, 응답의 size(=pageUnit 기본 10)를 화면이 되읽어 **셀렉트가 10으로
되돌아갔다** — 사용자는 자기 선택이 씹히는 것을 눈으로 본다. 감사 매트릭스(129af1117)보다
증상이 하나 더 나쁜 형태다.

부수 교정: 제출 버튼의 장식 아이콘(Zap·Loader2)에 aria-hidden 을 붙였다. 없으면 버튼의 접근
가능한 이름이 "Zap롤 수정" 이 된다(실측). 스크린리더 사용자가 듣는 이름이 달라진다.

회귀 방지 — red 실측 2축:
- 프런트: 수정 분기를 지우고 항상 create 로 보내면 1건 red.
- 백엔드: 검색을 무시하던 findAll 로 되돌리면 4건 red(내용·페이징·검색어 전달·총건수).
신설 3건은 수정 저장이 update 로 나가는지, roleId 가 잠기는지, 등록 진입이 이전 편집 값을
물고 가지 않는지를 고정한다.

⚠ RoleApiControllerTest 의 Page fixture 는 total 을 페이지 크기보다 크게 잡아야 한다 —
PageImpl 은 offset+pageSize > total 이면 total 을 content 기준으로 재계산하므로, 그렇지 않으면
단언이 조용히 무의미해진다(실측으로 7→1 이 됐다).

검증: compileJava compileTestJava · :business-core:test · :api-server:test ·
:api-server:harnessTest BUILD SUCCESSFUL · tsc 0 · lint error 0 · 운영 계약 420/420.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>